--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -177,6 +177,14 @@
     </div>
   </div>
 
+  <div class="row">
+    <div *ngIf="showTab===12 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+      <patient-follow-up-appointments>
+      </patient-follow-up-appointments>
+    </div>
+  </div>
+
 
   <!--
       <div class="row">
