--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -1,6 +1,7 @@
 <div class="card">
   <div class="card-header w3-orange w3-center">
-    <div i18n="Patient Clinicians History"><i class="fa fa-medkit"></i> Patient Clinicians History</div>
+    <div class="vericaltext" i18n="Patient Clinicians History"><i class="fa fa-medkit"></i> Patient Clinicians History
+    </div>
     <div class="w3-right">
 
       <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
