--- a/src/app/modules/clinician-manager/clinician-manager.component.css
+++ b/src/app/modules/clinician-manager/clinician-manager.component.css
@@ -70,4 +70,11 @@ input.selection {
 
 }
 
+.rowcontent {
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-align: center;
+}
 
