--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -23,7 +23,7 @@
     class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
       <div class="card">
-        <div class="card-header w3-blue">
+        <div class="card-header w3-blue w3-center">
           <span i18n="Patient Events"><i class="fa fa-calendar-times-o"></i></span>
           Date Picker (Treatments, Medication, Measurements and Recordings, Morisky Scale)
 
