--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
@@ -34,4 +34,10 @@ td {
   padding: 0.25rem;
 }
 
-
+.row-content {
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 15px;
+  margin-right: 15px;
+  text-align: center;
+}
