separate measurement graphs option added. routing for particular graph type added

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -54,7 +54,7 @@
         <a class="nav-link" [routerLink]="['/patient-id']"><i class="fa fa-search" aria-hidden="true"></i>Select Patient</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/clinician-manager/all']"><i class="icon-speedometer"></i>Patient data
+        <a class="nav-link" [routerLink]="['/clinician-manager/all/all']"><i class="icon-speedometer"></i>Patient data
           viewer</a>
       </li>
       <li class="nav-item">
