focus one year when switching separate / combined graph

--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -346,11 +346,11 @@
   <div *ngIf="cardToShow==='observations' || cardToShow === 'all'" class=" w3-center">
 
     <button class="btn btn-default {{!showSeparate ? 'btn-outline-success' : ''}}"
-            (click)="showSeparate=false;">Combined Graph
+            (click)="showSeparate=false;focusLastYear()">Combined Graph
     </button>
 
     <button class="btn btn-default {{showSeparate  ? 'btn-outline-success' : ''}}"
-            (click)="showSeparate=true;">Separate Graphs
+            (click)="showSeparate=true;focusLastYear()">Separate Graphs
     </button>
 
   </div>
