uddate: -DRB - E2E fixes - tooltips, undo, shadows

--- a/src/app/modules/data-resource-browser/data-resource-browser.component.html
+++ b/src/app/modules/data-resource-browser/data-resource-browser.component.html
@@ -3,5 +3,11 @@
         <resource-browser-tag>
 
         </resource-browser-tag>
+  <!--<div class="row">-->
+    <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">-->
+      <!--<patient-data-items>-->
+      <!--</patient-data-items>-->
+    <!--</div>-->
+  <!--</div>-->
 
 </div>
