--- a/src/app/modules/data-resource-browser/cards/data-resource-browser-card.component.css
+++ b/src/app/modules/data-resource-browser/cards/data-resource-browser-card.component.css
@@ -3,3 +3,40 @@
     height: 600px;
     border: 1px solid lightgray;
 }
+
+.card {
+  border-radius: 10px;
+}
+
+.card-footer {
+  border-radius: 10px;
+}
+
+.card-header {
+  border-radius: 10px;
+}
+
+.table-sm td {
+  padding: 0.05rem;
+}
+
+.table {
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 0rem;
+}
+
+.table th,
+.table td {
+  padding: 0.25rem;
+}
+
+.table tfoot {
+  padding: 0.25rem;
+}
+
+pagination {
+  padding: 0;
+  margin: 0;
+  height: 12px;
+}
