--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -8,7 +8,7 @@
       <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
     </div>
   </div>
-  <div class="card-block" style="overflow-x: auto;">
+  <div *ngIf="observationGroups" class="card-block" style="overflow-x: auto;">
 
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 w3-center">
