--- a/src/app/modules/clinician-manager/cards/patient-overview.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.css
@@ -1,18 +1,19 @@
 button {
-    background-color: #eee;
-    padding: 10px 10px;
-    border-radius: 10px;
+  background-color: #eee;
+  padding: 0.25rem 0.25rem;
+  border-radius: 10px;
 }
 
 button:hover {
-    background-color: #cfd8dc;
+  background-color: #cfd8dc;
 }
 
 button:disabled {
-    background-color: #eee;
-    color: #aaa;
-    cursor: auto;
+  background-color: #eee;
+  color: #aaa;
+  cursor: auto;
 }
+
 
 .card {
     border-radius: 10px;
